--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,8 @@
 name: Upload Python Package to PyPI when a Release is Created
 
 on:
+  workflow_dispatch:
+    
   release:
     types: [created]
 
