--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,9 +2,13 @@ name: Upload Python Package to PyPI when a Release is Created
 
 on:
   workflow_dispatch:
-    
+
   release:
     types: [created]
+
+  push:
+    branches:
+      - main
 
 jobs:
   pypi-publish:
