--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Upload Python Package to PyPI when a Release is Created
+name: upload python package to pypi when a release is created
 
 on:
   workflow_dispatch:
