--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,8 @@
 name: upload python package to pypi when a release is created
 
 on:
+  workflow_dispatch:
+    
   release:
     types: [created]
 
