--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: upload python package to pypi when a release is created
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
   pypi-publish:
